# CrimsonDesert-UltimateModsManager

./: CLEANUP_TASKS.md  README.md  cdumm.spec  pyproject.toml
src/cdumm/: __init__.py  main.py
src/cdumm/archive/: hashlittle.py  papgt_manager.py  pathc_handler.py  paz_crypto.py  paz_format.py  paz_parse.py  paz_repack.py  transactional_io.py
src/cdumm/engine/: apply_engine.py  conflict_detector.py  crimson_browser_handler.py  delta_engine.py  import_handler.py  json_patch_handler.py  mod_list_io.py  mod_manager.py  mod_validator.py  profile_manager.py  snapshot_manager.py  update_checker.py  version_detector.py
src/cdumm/gui/: changelog.py  main_window.py  mod_contents_dialog.py  mod_list_model.py  preset_picker.py  profile_dialog.py  splash.py  update_overlay.py  validation_dialog.py  verify_dialog.py  workers.py
src/cdumm/storage/: database.py
tests/: test_apply_engine.py  test_conflict_detector.py
